# csound-xtract

./: CMakeLists.txt  LICENCE  Plugin.cmake  README.md  TODO.md  plugin.h.patch
cmake/Modules/: FindCsound.cmake  FindXtract.cmake
examples/: csound-extract-demonstration.csd
include/: dtw.h
src/: dtw.cpp  opcodes.cpp
